<resources>
    <string name="app_name">Ganko1</string>
    <string name="password">Contraseña</string>
    <string name="username">Usuario</string>
    <string name="remember_pass">¿Olvidaste tu contraseña?</string>
    <string name="email">Email</string>
    <string name="txt_remember_pass">Por favor ingrese su correo electrónico, al cual se le enviará una contraseña temporal que podrá cambiar más adelante en sus configuraciones.</string>
    <string name="farm_name">Nombre</string>
    <string name="farm_location">Ubicación</string>
    <string name="empty_fields">Hay Campos Vacios</string>

    //Extensiones
    <string name="socket">El servidor no responde</string>
    <string name="http_404">Recurso no encontrado</string>
    <string name="http_401">Accion no autorizada</string>
    <string name="http_500">Error en el servidor</string>
    <string name="zero_farms">No hay fincas registradas</string>

    //Loading
    <string name="loading">Cargando</string>

    //Menu principal
    <string name="bovines">Bovinos</string>
    <string name="vaccination">Vacunación</string>
    <string name="health">Sanidad</string>
    <string name="manage">Manejo</string>
    <string name="prairies">Praderas</string>
    <string name="feeding">Alimentación</string>
    <string name="movements">Movimientos</string>
    <string name="reports">Reportes</string>
    <string name="logout">Cerrar sesión</string>
    <string name="change_farm">Cambiar finca</string>

    //Boton hamburguesa
    <string name="open_menu">Menu abierto</string>
    <string name="close_menu">Menu cerrado</string>

    //Menu de bovinos
    <string name="reproductive">Reproductivo</string>
    <string name="milk">Leche</string>
    <string name="meat">Ceba</string>
    <string name="statistics">Estadísticas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number">Número:</string>
    <string name="sex">Sexo:</string>
    <string name="birth_date">Fecha de nacimiento:</string>
    <string name="type">Tipo</string>
    <string name="weight">Peso</string>
    <string name="color">Color</string>
    <string name="breed">Raza:</string>
    <string name="father_id">ID Padre</string>
    <string name="mother_id">ID Madre</string>
    <string name="add_bovine_photo">add bovine photo</string>
    <string name="save">Guardar</string>
    <string name="required">Campos requeridos</string>
    <string name="farm_size">Hectáreas</string>
    <string name="retired">Ver retirados</string>
    <string name="births_number">Número de Partos</string>
    <string name="male">Macho</string>
    <string name="female">Hembra</string>
    <string name="weaned">Destetado</string>
    <string name="back">Atras</string>
    <string name="next">Siguiente</string>
    <string name="specialized_dairy">Lechería especializada</string>
    <string name="double_purpose">Doble propósito</string>
    <string name="photo">Foto</string>
    <string name="add_farm">Agregar finca</string>
    <string name="edit_farm">Editar finca</string>
    <string name="farms">Fincas</string>
    <string name="bait">Ceba</string>
    <string name="alimentation">Alimentacion</string>
    <string name="vaccine">Vacunas</string>
    <string name="morning">Mañana</string>
    <string name="afternoon">Tarde</string>
    <string name="enterDateMilkProduction">Ingrese la fecha de ordeño</string>
    <string name="enterLitersMilkProduction">Ingrese los litros producidos</string>
    <string name="cancel">Cancelar</string>
    <string name="milkingDayText">Jornada de ordeño:</string>
    <string name="add">AGREGAR</string>
    <string name="date_of_production">Fecha de produccion:</string>

    <string-array name="bovine_sexs">
        <item>Macho</item>
        <item>Hembra</item>
    </string-array>

    <string-array name="milkingDays">
        <item>Mañana</item>
        <item>Tarde</item>
    </string-array>

    //Out spinner
    <string-array name="out_spinner">
        <item>Venta</item>
        <item>Descarte</item>
        <item>Consumo</item>
        <item>Muerte</item>
        <item>Robo</item>
        <item>Otro</item>
    </string-array>
    <string name="retired_bovine">Retirados</string>
    <string name="date_text">Fecha</string>
    <string name="name">Nombre:</string>
    <string name="purpose">Propósito:</string>
    <string name="total_production">Total produccion del mes:</string>
    <string name="average_production">Produccion promedio:</string>
    <string name="date_of_capture">Fecha de captura:</string>
    <string name="zeal">Celo</string>
    <string name="service">Servicio</string>
    <string name="diagnosis">Diagnóstico</string>
    <string name="birth">Parto</string>
    <string name="zeal_date">Fecha de celo:</string>
    <string name="delete_service">Delete service</string>
    <string-array name="events_types">
        <item>Corte de ombligo</item>
        <item>Identificación</item>
        <item>Descorné</item>
        <item>Arreglo de cascos</item>
        <item>Castración</item>
        <item>Secado</item>
        <item>Otro</item>
    </string-array>

</resources>
