<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ganko.movil.ganko1.ui.bovines.add.AddBovineActivity"
    >

    <data>
        <import type="android.view.View"/>
        <variable
            name="state"
            type="Integer"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <android.support.v4.widget.NestedScrollView
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginLeft="@dimen/horizontal_margin"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility='@{state == 0 ? View.VISIBLE : View.GONE}'
                    tools:visibility="visible">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/number"/>
                        <EditText
                            android:id="@+id/bovine_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input"
                            android:hint="@string/number"
                            android:inputType="text" />


                        <TextView
                            style="@style/TextAppearance.AppCompat.Caption"
                            android:layout_marginTop="@dimen/small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/farm_name"/>

                        <EditText
                            android:id="@+id/bovine_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input"
                            android:hint="@string/farm_name"
                            android:inputType="text"
                            />



                        <TextView
                            style="@style/TextAppearance.AppCompat.Caption"
                            android:layout_marginTop="@dimen/small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/breed"/>

                        <EditText
                            android:id="@+id/bovine_breed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input"
                            android:hint="@string/breed"
                            android:inputType="text"
                            />


                    <TextView
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:layout_marginTop="@dimen/small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sex"/>
                    <RadioGroup
                        android:id="@+id/bovine_sex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/male_bovine"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"/>
                        <RadioButton
                            android:id="@+id/female_bovine"
                            android:layout_marginLeft="@dimen/small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:checked="true"
                            android:text="@string/female"
                            android:layout_marginStart="@dimen/small" />
                    </RadioGroup>

                    <TextView
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small"
                        android:text="@string/births_number"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input"
                        android:hint="@string/births_number"
                        android:visibility="visible"
                        />

                </LinearLayout>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility='@{state == 1 ? View.VISIBLE : View.GONE}'
                    tools:visibility="gone">



                    <TextView
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small"
                        android:text="@string/weight"/>
                    <EditText
                        android:id="@+id/bovine_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input"
                        android:hint="@string/weight"
                        android:inputType="number" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small"
                        android:text="@string/color"/>
                    <EditText
                        android:id="@+id/bovine_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input"
                        android:hint="@string/color"
                        android:inputType="text" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small"
                        android:text="@string/birth_date"/>
                    <EditText
                        android:id="@+id/bovine_birth_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input"
                        android:hint="@string/birth_date"
                        android:inputType="date"
                        />

                    <android.support.v7.widget.AppCompatCheckBox
                        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                        android:layout_marginTop="@dimen/small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/weaned"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


                    <TextView
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small"
                        android:text="@string/type"/>

                    <RadioGroup
                        android:id="@+id/bovine_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/small"
                        android:paddingStart="@dimen/small">
                        <RadioButton
                            android:id="@+id/milk"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/specialized_dairy"
                            />
                        <RadioButton
                            android:id="@+id/meat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/meat"
                            />
                        <RadioButton
                            android:id="@+id/double_purpose"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/double_purpose"/>

                    </RadioGroup>

                </LinearLayout>


                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:visibility='@{state == 2 ? View.VISIBLE : View.GONE}'
                    tools:visibility="gone">


                    <TextView
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small"
                        android:text="@string/father_id"/>
                    <EditText
                        android:id="@+id/bovine_father_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input"
                        android:hint="@string/father_id"
                        android:inputType="number"/>

                    <TextView
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small"
                        android:text="@string/mother_id"/>
                    <EditText
                        android:id="@+id/bovine_mother_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input"
                        android:hint="@string/mother_id"
                        android:inputType="number"/>

                    <TextView
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium"
                        android:text="@string/photo"/>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp">

                        <ImageView
                            android:id="@+id/bovine_photo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#333333"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/add_bovine_photo" />

                        <ImageView
                            android:id="@+id/add_photo_icon"
                            android:layout_width="@dimen/big"
                            android:layout_height="@dimen/big"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_add_photo"
                            android:contentDescription="@string/add_bovine_photo" />

                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/back_bovine_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                android:textColor="@color/colorPrimary"
                android:background="@color/light_gray_card"
                android:visibility='@{state == 0 ? View.INVISIBLE : View.VISIBLE}'
                tools:visibility='gone' />
            <Button
                android:id="@+id/cancel_bovine_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cancelar"
                android:textColor="@color/colorPrimary"
                android:background="@color/light_gray_card"
                android:visibility='@{state == 0 ? View.VISIBLE : View.GONE}'
                tools:visibility='visible' />

            <ImageView
                android:layout_width="2dp"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/next_bovine_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/light_gray_card"
                android:text="@string/next"
                tools:visibility="visible"
                android:textColor="@color/colorPrimary"
                android:visibility='@{state == 2 ? View.GONE : View.VISIBLE}'
                />

            <Button
                android:id="@+id/add_bovine_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:background="@color/colorAccent"
                android:textColor="#fff"
                android:visibility='@{state == 2 ? View.VISIBLE : View.GONE}'
                tools:visibility="gone" />


        </LinearLayout>


    </LinearLayout>

</layout>



