<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.password.PasswordActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:scaleType="centerCrop"
            android:src="@drawable/background_login" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionBarSize"
            android:title=""
            />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:stretchColumns="*"
            android:layout_marginTop="@dimen/medium"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:orientation="vertical">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big"
                    android:gravity="center"
                    android:text="@string/remember_pass"
                    android:textSize="@dimen/subtitle" />

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big"
                    android:inputType="textMultiLine"
                    android:padding="@dimen/small"
                    android:text="@string/txt_remember_pass"
                    android:textSize="@dimen/text_size" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/small"
                    android:layout_marginTop="@dimen/big"
                    >

                    <ImageView
                        android:layout_width="@dimen/icon"
                        android:layout_height="@dimen/icon"
                        android:src="@drawable/ic_email" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:layout_marginLeft="@dimen/small"
                        />

                </TableRow>

            </LinearLayout>

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/big"
                    android:layout_weight="0.3"
                    android:src="@drawable/ic_confirm"
                    app:backgroundTint="@color/colorPrimary"
                    app:fabSize="normal"
                    />
        </TableLayout>
    </FrameLayout>

</layout>

